<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/screentTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Enter Score"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:text="@string/textview_SelectHole_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/selectHole"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:prompt="@string/spinnerSelectHole_Hint" />

    <TextView
        android:id="@+id/textView_ShowPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/textView_SelectPlayer_Label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/selectPlayer"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:prompt="@string/spinnerSelPlayer_Hint" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/textView_SelectScoreLabel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/selectScore"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:prompt="@string/spinnerSelScore_Hint" />

    <Button
        android:id="@+id/SaveScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="Save Score" />

</LinearLayout>
